--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin">12dp</dimen>
+
     <dimen name="doge_width">70dp</dimen>
     <dimen name="doge_height">80dp</dimen>
     <dimen name="meme_width">50dp</dimen>
